--- a/src/app/Automoviles/Automoviles.component.html
+++ b/src/app/Automoviles/Automoviles.component.html
@@ -1,6 +1,7 @@
 <div>
   <h2>Automóviles</h2>
 
+  <button [routerLink]="['/automoviles','create']">Agregar</button>
   <div>
     <table>
       <thead>
