Componentes anidados con Input

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<a [routerLink]="['automoviles']">Tabla</a> |
+<a [routerLink]="['tarjetas']">Tarjetas</a>
 <router-outlet></router-outlet>
 
 <hr/>
