Comunicacion entre componentes con subject

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <a [routerLink]="['automoviles']">Tabla</a> |
-<a [routerLink]="['tarjetas']">Tarjetas</a>
+<a [routerLink]="['tarjetas']">Tarjetas</a> |
+<a [routerLink]="['vistas']">Vistas</a>
 <router-outlet></router-outlet>
 
 <hr/>
